--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,11 @@
       property="og:title"
       content="Ustosunkowując się do minionej epoki, młodopolanie przyjęli zdecydowaną postawę oskarżycielską w stosunku do pozytywistów, którym mieli za złe brak skutecznych działań i pogodzenie się z faktem podzielenia polskich ziem pomiędzy trzy sąsiednie mocarstwa."
     />
-    <meta property="og:url" content="https://barok.netlify.app" />
-    <meta property="og:image" content="https://barok.netlify.app/1.jpg" />
+    <meta property="og:url" content="https://mloda-polska.netlify.app" />
+    <meta
+      property="og:image"
+      content="https://mloda-polska.netlify.app/1.jpg"
+    />
     <meta property="fb:app_id" content="1951716098397474" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="1200" />
@@ -45,12 +48,15 @@
       name="twitter:description"
       content="Dążenia niepodległościowe w tamtym czasie wzrastały, nastąpił więc powrót do romantyzmu i poszukiwań symbolicznych i nastrojowych form ekspresji (patronami młodopolskich twórców szybko stali się tacy poeci, jak Cyprian Norwid czy Juliusz Słowacki)."
     />
-    <meta name="twitter:image" content="https://barok.netlify.app/2.png" />
+    <meta
+      name="twitter:image"
+      content="https://mloda-polska.netlify.app/2.png"
+    />
     <meta
       name="twitter:image:alt"
       content="Zwrócono uwagę na takie formy uczuciowości jak: melancholia, rozpacz, pożądanie nirwany lub śmierci, tragizm istnienia, somnambulizm."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/2.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -70,7 +76,7 @@
         "name": "Literatura młodopolska",
         "contentUrl": "https://pl-pl.facebook.com/lozagan",
         "duration": "PT00H04M33S",
-        "thumbnailUrl": "https://barok.netlify.app/3.jpg",
+        "thumbnailUrl": "https://mloda-polska.netlify.app/3.jpg",
         "uploadDate": "2021-12-18",
         "description": "Głównymi ośrodkami życia literacko-artystycznego Młodej Polski stały się Kraków i Lwów, dużego znaczenia nabrało również Zakopane (rozwijała się tzw. „poezja tatrzańska”, tworzona m.in. przez Kazimierza Przerwę-Tetmajera)."
       }
@@ -79,7 +85,7 @@
       {
         "@context": "http://schema.org",
         "@type": "Blog",
-        "url": "https://barok.netlify.app"
+        "url": "https://mloda-polska.netlify.app"
       }
     </script>
     <script type="application/ld+json">
@@ -87,7 +93,7 @@
         "@context": "http://schema.org",
         "@type": "WebSite",
         "name": "Młoda Polska",
-        "url": "https://barok.netlify.app",
+        "url": "https://mloda-polska.netlify.app",
         "sameAs": [
           "https://www.facebook.com/MadeinKrakow",
           "https://goo.gl/maps/Yk6Pjc5qrCXNugda6",
