--- a/public/index.html
+++ b/public/index.html
@@ -103,5 +103,19 @@
         ]
       }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3EJFWTESR8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3EJFWTESR8");
+    </script>
   </body>
 </html>
